--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
     <script>
         async function loadCharacter() {
             try {
-                const response = await fetch("character.json");
+                const response = await fetch("test.json");
                 const character = await response.json();
 
                 let charHTML = `
