--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Character Sheet</title>
+    <title>D&D Character Sheet Editor</title>
     <style>
         body {
             font-family: "Georgia", serif;
@@ -23,13 +23,11 @@
         h1 {
             font-size: 24px;
             text-transform: uppercase;
-            margin-bottom: 5px;
         }
-        h2 {
-            font-size: 18px;
-            text-transform: uppercase;
-            border-bottom: 2px solid #000;
-            margin-top: 15px;
+        input, textarea {
+            width: 100%;
+            padding: 5px;
+            margin: 5px 0;
         }
         .stat-block, .skills, .abilities, .equipment {
             text-align: left;
@@ -38,119 +36,127 @@
             border: 1px solid #000;
             background: #eee;
         }
-        .stat-block ul, .skills ul, .abilities ul, .equipment ul {
-            list-style: none;
-            padding: 0;
+        .button-container {
+            margin-top: 20px;
         }
-        .stat-block ul li, .skills ul li, .abilities ul li, .equipment ul li {
-            padding: 5px 0;
-        }
-        .top-section {
-            display: flex;
-            justify-content: space-between;
-            border-bottom: 2px solid #000;
-            padding-bottom: 10px;
-        }
-        .top-section div {
-            width: 30%;
-        }
-        .stat-grid {
-            display: flex;
-            justify-content: space-between;
-        }
-        .stat-grid div {
-            width: 30%;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
+        button {
+            padding: 10px;
+            margin: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <div class="sheet-container">
-        <h1 id="char-name">Loading...</h1>
-        <div class="top-section">
-            <div><strong>Class:</strong> <span id="char-class"></span></div>
-            <div><strong>Race:</strong> <span id="char-race"></span></div>
-            <div><strong>Level:</strong> <span id="char-level"></span></div>
-        </div>
-        <div class="top-section">
-            <div><strong>Background:</strong> <span id="char-background"></span></div>
-            <div><strong>Alignment:</strong> <span id="char-alignment"></span></div>
-        </div>
-        
-        <h2>Stats</h2>
-        <div class="stat-grid" id="char-stats"></div>
+    <h1>D&D Character Sheet Editor</h1>
 
-        <h2>Combat Stats</h2>
-        <div class="stat-block">
-            <ul>
-                <li><strong>Armor Class:</strong> <span id="char-ac"></span></li>
-                <li><strong>Hit Points:</strong> <span id="char-hp"></span></li>
-                <li><strong>Speed:</strong> <span id="char-speed"></span> ft.</li>
-            </ul>
-        </div>
+    <div class="button-container">
+        <input type="file" id="fileInput">
+        <button onclick="downloadCharacter()">Download JSON</button>
+    </div>
+
+    <div class="sheet-container">
+        <h2>Character Details</h2>
+        <label>Name: <input type="text" id="char-name"></label><br>
+        <label>Class: <input type="text" id="char-class"></label><br>
+        <label>Race: <input type="text" id="char-race"></label><br>
+        <label>Background: <input type="text" id="char-background"></label><br>
+        <label>Alignment: <input type="text" id="char-alignment"></label><br>
+        <label>Level: <input type="number" id="char-level"></label><br>
+
+        <h2>Stats</h2>
+        <div id="char-stats"></div>
 
         <h2>Skills</h2>
-        <div class="skills">
-            <ul id="char-skills"></ul>
-        </div>
+        <div id="char-skills"></div>
 
         <h2>Abilities</h2>
-        <div class="abilities">
-            <ul id="char-abilities"></ul>
-        </div>
+        <textarea id="char-abilities" rows="4"></textarea>
 
         <h2>Equipment</h2>
-        <div class="equipment">
-            <ul id="char-equipment"></ul>
-        </div>
+        <textarea id="char-equipment" rows="4"></textarea>
     </div>
 
     <script>
-        async function loadCharacter() {
-            try {
-                const response = await fetch("test.json");
-                const character = await response.json();
+        let characterData = {};
 
-                // Basic Info
-                document.getElementById("char-name").textContent = character.name;
-                document.getElementById("char-class").textContent = character.class;
-                document.getElementById("char-race").textContent = character.race;
-                document.getElementById("char-level").textContent = character.level;
-                document.getElementById("char-background").textContent = character.background;
-                document.getElementById("char-alignment").textContent = character.alignment;
-                document.getElementById("char-ac").textContent = character.armorClass;
-                document.getElementById("char-hp").textContent = character.hitPoints;
-                document.getElementById("char-speed").textContent = character.speed;
+        document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            if (!file) return;
 
-                // Stats
-                let statsHTML = "";
-                for (const [stat, value] of Object.entries(character.stats)) {
-                    statsHTML += `<div><strong>${stat.substring(0, 3).toUpperCase()}:</strong> ${value}</div>`;
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                try {
+                    characterData = JSON.parse(e.target.result);
+                    populateFields(characterData);
+                } catch (error) {
+                    alert("Invalid JSON file.");
                 }
-                document.getElementById("char-stats").innerHTML = statsHTML;
+            };
+            reader.readAsText(file);
+        });
 
-                // Skills
-                let skillsHTML = "";
-                for (const [skill, bonus] of Object.entries(character.skills)) {
-                    skillsHTML += `<li><strong>${skill}:</strong> +${bonus}</li>`;
-                }
-                document.getElementById("char-skills").innerHTML = skillsHTML;
+        function populateFields(data) {
+            document.getElementById("char-name").value = data.name || "";
+            document.getElementById("char-class").value = data.class || "";
+            document.getElementById("char-race").value = data.race || "";
+            document.getElementById("char-background").value = data.background || "";
+            document.getElementById("char-alignment").value = data.alignment || "";
+            document.getElementById("char-level").value = data.level || "";
 
-                // Abilities
-                document.getElementById("char-abilities").innerHTML = character.abilities.map(a => `<li>${a}</li>`).join("");
-
-                // Equipment
-                document.getElementById("char-equipment").innerHTML = character.equipment.map(e => `<li>${e}</li>`).join("");
-
-            } catch (error) {
-                console.error("Error fetching character.json:", error);
+            let statsHTML = "";
+            for (const [stat, value] of Object.entries(data.stats || {})) {
+                statsHTML += `<label>${stat}: <input type="number" id="stat-${stat}" value="${value}"></label><br>`;
             }
+            document.getElementById("char-stats").innerHTML = statsHTML;
+
+            let skillsHTML = "";
+            for (const [skill, bonus] of Object.entries(data.skills || {})) {
+                skillsHTML += `<label>${skill}: <input type="number" id="skill-${skill}" value="${bonus}"></label><br>`;
+            }
+            document.getElementById("char-skills").innerHTML = skillsHTML;
+
+            document.getElementById("char-abilities").value = (data.abilities || []).join("\n");
+            document.getElementById("char-equipment").value = (data.equipment || []).join("\n");
         }
 
-        loadCharacter();
+        function getUpdatedCharacter() {
+            let updatedCharacter = {
+                name: document.getElementById("char-name").value,
+                class: document.getElementById("char-class").value,
+                race: document.getElementById("char-race").value,
+                background: document.getElementById("char-background").value,
+                alignment: document.getElementById("char-alignment").value,
+                level: parseInt(document.getElementById("char-level").value) || 1,
+                stats: {},
+                skills: {},
+                abilities: document.getElementById("char-abilities").value.split("\n").filter(Boolean),
+                equipment: document.getElementById("char-equipment").value.split("\n").filter(Boolean)
+            };
+
+            document.querySelectorAll("#char-stats input").forEach(input => {
+                let statName = input.id.replace("stat-", "");
+                updatedCharacter.stats[statName] = parseInt(input.value) || 0;
+            });
+
+            document.querySelectorAll("#char-skills input").forEach(input => {
+                let skillName = input.id.replace("skill-", "");
+                updatedCharacter.skills[skillName] = parseInt(input.value) || 0;
+            });
+
+            return updatedCharacter;
+        }
+
+        function downloadCharacter() {
+            let updatedCharacter = getUpdatedCharacter();
+            let dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(updatedCharacter, null, 2));
+            let downloadAnchor = document.createElement("a");
+            downloadAnchor.setAttribute("href", dataStr);
+            downloadAnchor.setAttribute("download", updatedCharacter.name.replace(/\s+/g, '_') + "_sheet.json");
+            document.body.appendChild(downloadAnchor);
+            downloadAnchor.click();
+            document.body.removeChild(downloadAnchor);
+        }
     </script>
 
 </body>
