--- a/home/index.html
+++ b/home/index.html
@@ -59,9 +59,9 @@
         <div class="section">
             <h2>Character Info</h2>
             <strong>Name:</strong> <span id="char-name" class="editable" contenteditable="false">Character Name</span><br>
-            <strong>Class:</strong> <span id="char-class" class="editable" contenteditable="false">Rogue</span><br>
-            <strong>Race:</strong> <span id="char-race" class="editable" contenteditable="false">Elf</span><br>
-            <strong>Level:</strong> <span id="char-level" class="editable" contenteditable="false">5</span>
+            <strong>Class:</strong> <span id="char-class" class="editable" contenteditable="false">Class</span><br>
+            <strong>Race:</strong> <span id="char-race" class="editable" contenteditable="false">Race</span><br>
+            <strong>Level:</strong> <span id="char-level" class="editable" contenteditable="false">Lvl</span>
         </div>
         <div class="section">
             <h2>Stats</h2>
