--- a/home/index.html
+++ b/home/index.html
@@ -6,106 +6,101 @@
     <title>D&D Character Sheet</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            text-align: center;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #eaeaea;
+            margin: 0;
         }
         .sheet-container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
+            width: 100%;
+            max-width: 1200px;
             background: white;
-            border: 2px solid black;
-            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            overflow-x: auto;
         }
-        .section {
-            border: 1px solid black;
-            padding: 10px;
-            background: #fff;
-        }
-        .section h2 {
-            margin: 0;
-            font-size: 16px;
-            background: black;
-            color: white;
-            padding: 5px;
+        h2 {
             text-align: center;
-        }
-        .editable {
-            display: inline-block;
-            cursor: pointer;
-            padding: 2px 5px;
-            border-radius: 3px;
-            min-width: 50px;
-        }
-        .editable:focus {
-            outline: none;
-            background: #ddd;
-        }
-        button {
-            margin-top: 10px;
-            padding: 10px;
-            cursor: pointer;
+            margin-bottom: 20px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
+            table-layout: fixed;
         }
         th, td {
-            border: 1px solid black;
-            padding: 5px;
+            border: 1px solid #ccc;
+            padding: 12px;
             text-align: center;
+            font-size: 14px;
+            word-wrap: break-word;
+        }
+        th {
+            background-color: #004085;
+            color: white;
+            font-weight: bold;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        tr:hover {
+            background-color: #d6e9f8;
         }
     </style>
 </head>
 <body>
-    <h1>D&D Character Sheet</h1>
-    <input type="file" id="fileInput" accept=".json"><br>
     <div class="sheet-container">
-        <div class="section">
-            <h2>Character Info</h2>
-            <strong>Name:</strong> <span id="char-name" class="editable" contenteditable="false">Character Name</span><br>
-            <strong>Class:</strong> <span id="char-class" class="editable" contenteditable="false">Class</span><br>
-            <strong>Race:</strong> <span id="char-race" class="editable" contenteditable="false">Race</span><br>
-            <strong>Level:</strong> <span id="char-level" class="editable" contenteditable="true">5</span>
-        </div>
-        <div class="section">
-            <h2>Ability Scores</h2>
-            <table>
-                <tr><th>Ability</th><th>Score</th><th>Modifier</th></tr>
-                <tr><td>Strength</td><td contenteditable="true" class="ability" data-ability="str">10</td><td id="mod-str">0</td></tr>
-                <tr><td>Dexterity</td><td contenteditable="true" class="ability" data-ability="dex">10</td><td id="mod-dex">0</td></tr>
-                <tr><td>Constitution</td><td contenteditable="true" class="ability" data-ability="con">10</td><td id="mod-con">0</td></tr>
-                <tr><td>Intelligence</td><td contenteditable="true" class="ability" data-ability="int">10</td><td id="mod-int">0</td></tr>
-                <tr><td>Wisdom</td><td contenteditable="true" class="ability" data-ability="wis">10</td><td id="mod-wis">0</td></tr>
-                <tr><td>Charisma</td><td contenteditable="true" class="ability" data-ability="cha">10</td><td id="mod-cha">0</td></tr>
-            </table>
-        </div>
-        <div class="section">
-            <h2>Skills</h2>
-            <table>
-                <tr><th>Skill</th><th>Proficient</th><th>Bonus</th></tr>
-                <script>
-                    const skills = {
-                        "Acrobatics": "dex", "Animal Handling": "wis", "Arcana": "int", "Athletics": "str",
-                        "Deception": "cha", "History": "int", "Insight": "wis", "Intimidation": "cha",
-                        "Investigation": "int", "Medicine": "wis", "Nature": "int", "Perception": "wis",
-                        "Performance": "cha", "Persuasion": "cha", "Religion": "int", "Sleight of Hand": "dex",
-                        "Stealth": "dex", "Survival": "wis"
-                    };
-                    
-                    for (const [skill, ability] of Object.entries(skills)) {
-                        document.write(`<tr><td>${skill} (${ability.toUpperCase()})</td>
-                            <td><input type="checkbox" class="proficiency" data-skill="${skill.toLowerCase().replace(/\s/g, '-')}"></td>
-                            <td id="skill-${skill.toLowerCase().replace(/\s/g, '-')}">0</td></tr>`);
-                    }
-                </script>
-            </table>
-        </div>
+        <h2>D&D Character Sheet</h2>
+        <table id="character-table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Class</th>
+                    <th>Level</th>
+                    <th>Strength</th>
+                    <th>Dexterity</th>
+                    <th>Constitution</th>
+                    <th>Intelligence</th>
+                    <th>Wisdom</th>
+                    <th>Charisma</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
-    <button onclick="downloadCharacter()">Download JSON</button>
+
+    <script>
+        async function loadCharacterSheet() {
+            try {
+                const response = await fetch('test.json'); // JSON file containing character data
+                const data = await response.json();
+                const tableBody = document.querySelector('#character-table tbody');
+                
+                data.characters.forEach(character => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${character.name}</td>
+                        <td>${character.class}</td>
+                        <td>${character.level}</td>
+                        <td>${character.strength}</td>
+                        <td>${character.dexterity}</td>
+                        <td>${character.constitution}</td>
+                        <td>${character.intelligence}</td>
+                        <td>${character.wisdom}</td>
+                        <td>${character.charisma}</td>
+                    `;
+                    tableBody.appendChild(row);
+                });
+            } catch (error) {
+                console.error('Error loading character sheet:', error);
+            }
+        }
+
+        loadCharacterSheet();
+    </script>
 </body>
 </html>
