--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Character Sheet Editor</title>
+    <title id="pageTitle">D&D Character Sheet - </title>
     <style>
         body { font-family: 'Georgia', serif; background-color: #f4f1de; margin: 0; padding: 20px; }
         .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>D&D Character Sheet Editor</h2>
+        <h2 id="characterTitle">D&D Character Sheet</h2>
         <input type="file" id="fileInput" accept=".json">
         <button onclick="downloadJSON()">Download Edited JSON</button>
         <div id="characterSheet" class="char-sheet"></div>
@@ -35,6 +35,8 @@
             reader.onload = function(e) {
                 try {
                     characterData = JSON.parse(e.target.result);
+                    document.getElementById("pageTitle").textContent = `D&D Character Sheet - ${characterData.title}`;
+                    document.getElementById("characterTitle").textContent = characterData.title;
                     displayCharacterSheet();
                 } catch (error) {
                     alert("Invalid JSON file.");
@@ -84,6 +86,8 @@
             container.appendChild(createSection("Combat Stats", characterData.main.combat, characterData.main.combat));
             container.appendChild(createSection("Abilities", characterData.main.stats, characterData.main.stats));
             container.appendChild(createSection("Skills", characterData.main.skillsprof, characterData.main.skillsprof));
+            container.appendChild(createSection("Wealth", characterData.equipmentAndWealth.wealth, characterData.equipmentAndWealth.wealth));
+            container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment));
         }
 
         function downloadJSON() {
