--- a/home/index.html
+++ b/home/index.html
@@ -45,6 +45,10 @@
             reader.readAsText(file);
         });
 
+        function formatKeyName(key) {
+            return key.replace(/([A-Z])/g, ' $1').replace(/^./, function(str) { return str.toUpperCase(); }).trim();
+        }
+
         function displayCharacterSheet() {
             const container = document.getElementById("characterSheet");
             container.innerHTML = "";
@@ -52,7 +56,7 @@
             function createEditableRow(key, value, parent) {
                 const row = document.createElement("tr");
                 const keyCell = document.createElement("td");
-                keyCell.textContent = key;
+                keyCell.textContent = formatKeyName(key);
                 const valueCell = document.createElement("td");
                 valueCell.textContent = value;
                 valueCell.setAttribute("contenteditable", "true");
@@ -73,7 +77,7 @@
                 const table = document.createElement("table");
                 for (const key in data) {
                     if (typeof data[key] === "object" && !Array.isArray(data[key])) {
-                        section.appendChild(createSection(key, data[key], data[key]));
+                        section.appendChild(createSection(formatKeyName(key), data[key], data[key]));
                     } else {
                         table.appendChild(createEditableRow(key, data[key], parent));
                     }
