--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,8 @@
         .container { max-width: 900px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); }
         h2 { text-align: center; }
         input, button { display: block; margin: 10px auto; padding: 10px; font-size: 16px; }
-        .char-sheet { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+        .char-sheet { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
+        .full-width { grid-column: span 3; }
         .section { border: 2px solid black; padding: 10px; border-radius: 5px; background: #eae0c8; }
         .section h3 { text-align: center; margin-top: 0; }
         table { width: 100%; border-collapse: collapse; }
@@ -46,7 +47,7 @@
         });
 
         function formatKeyName(key) {
-            return key.replace(/([A-Z])/g, ' $1').replace(/^./, function(str) { return str.toUpperCase(); }).trim();
+            return key.replace(/([A-Z])/g, ' $1').replace(/^./, function(str) { return str.toUpperCase(); });
         }
 
         function displayCharacterSheet() {
@@ -68,9 +69,10 @@
                 return row;
             }
 
-            function createSection(title, data, parent) {
+            function createSection(title, data, parent, fullWidth = false) {
                 const section = document.createElement("div");
                 section.classList.add("section");
+                if (fullWidth) section.classList.add("full-width");
                 const header = document.createElement("h3");
                 header.textContent = title;
                 section.appendChild(header);
@@ -86,12 +88,16 @@
                 return section;
             }
 
-            container.appendChild(createSection("Core Stats", characterData.main.core, characterData.main.core));
-            container.appendChild(createSection("Combat Stats", characterData.main.combat, characterData.main.combat));
-            container.appendChild(createSection("Abilities", characterData.main.stats, characterData.main.stats));
-            container.appendChild(createSection("Skills", characterData.main.skillsprof, characterData.main.skillsprof));
+            container.appendChild(createSection("Core Information", characterData.main.core, characterData.main.core, true));
+            container.appendChild(createSection("Ability Scores", characterData.main.stats, characterData.main.stats));
+            container.appendChild(createSection("Saving Throws", characterData.main.core.savingThrows, characterData.main.core.savingThrows));
+            container.appendChild(createSection("Skills", characterData.main.skillsprof, characterData.main.skillsprof, true));
+            container.appendChild(createSection("Combat Stats", characterData.main.combat, characterData.main.combat, true));
+            container.appendChild(createSection("Weapons & Spells", characterData.main.weapons, characterData.main.weapons, true));
+            container.appendChild(createSection("Special Attacks", { list: characterData.main.specialAttacks.join(", ") }, characterData.main));
+            container.appendChild(createSection("Special Defenses", { list: characterData.main.specialDefences.join(", ") }, characterData.main));
             container.appendChild(createSection("Wealth", characterData.equipmentAndWealth.wealth, characterData.equipmentAndWealth.wealth));
-            container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment));
+            container.appendChild(createSection("Equipment", characterData.equipmentAndWealth.equipment, characterData.equipmentAndWealth.equipment, true));
         }
 
         function downloadJSON() {
